--- a/Section 3/assignment_solutions/assignment_solutions.ipynb
+++ b/Section 3/assignment_solutions/assignment_solutions.ipynb
@@ -356,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mllearning",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
