--- a/Section 4 - Inbuilt DataStructures/list_assignment_solution/list_assignment_solution.ipynb
+++ b/Section 4 - Inbuilt DataStructures/list_assignment_solution/list_assignment_solution.ipynb
@@ -13,11 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "5b2486ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "lst = list(range(1, 21))\n",
+    "lst = list(range(1,21))\n",
     "print(lst)"
    ]
   },
@@ -32,13 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "7d020e18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First element : 1\n",
+      "Middle element : 11\n",
+      "last element : 20\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"First element: {lst[0]}\")\n",
-    "print(f\"Middle element: {lst[len(lst) // 2]}\")\n",
-    "print(f\"Last element: {lst[-1]}\")"
+    "print(f\"First element : {lst[0]}\")\n",
+    "print(f\"Middle element : {lst[len(lst)//2]}\")\n",
+    "print(f\"last element : {lst[-1]}\")"
    ]
   },
   {
@@ -52,13 +72,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "cace6dd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first five elements : [1, 2, 3, 4, 5]\n",
+      "last five elements : [16, 17, 18, 19, 20]\n",
+      "Middle elements : [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"First five elements: {lst[:5]}\")\n",
-    "print(f\"Last five elements: {lst[-5:]}\")\n",
-    "print(f\"Elements from index 5 to 15: {lst[5:16]}\")"
+    "print(f\"first five elements : {lst[:5]}\")\n",
+    "print(f\"last five elements : {lst[-5:]}\")\n",
+    "print(f\"Middle elements : {lst[5:16]}\")"
    ]
   },
   {
@@ -72,12 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "eb74af25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "squares = [x**2 for x in range(1, 11)]\n",
-    "print(squares)"
+    "sqr = [x**2 for x in range(1,11)]\n",
+    "print(sqr)"
    ]
   },
   {
@@ -91,12 +131,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "id": "56b59d30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assignment 1 list =  [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "[False, True, False, True, False, True, False, True, False, True, False, True, False, True, False, True, False, True, False, True]\n",
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "evens = [x for x in lst if x % 2 == 0]\n",
-    "print(evens)"
+    "print(\"Assignment 1 list = \",lst)\n",
+    "\n",
+    "even = [x%2==0 for x in lst]#boolean return karega\n",
+    "print(even)\n",
+    "\n",
+    "even_no = [x for x in lst if x%2==0]\n",
+    "print(even_no)\n"
    ]
   },
   {
@@ -110,34 +166,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
+   "id": "6560c245",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original list: [2, 2, 14, 6, 4, 15, 4, 14, 20, 8, 20, 3, 12, 8, 14]\n",
-      "Sorted in ascending order: [2, 2, 3, 4, 4, 6, 8, 8, 12, 14, 14, 14, 15, 20, 20]\n",
-      "Sorted in descending order: [20, 20, 15, 14, 14, 14, 12, 8, 8, 6, 4, 4, 3, 2, 2]\n",
-      "List with duplicates removed: [2, 3, 4, 6, 8, 12, 14, 15, 20]\n"
+      "Original list = [10, 3, 6, 15, 1, 13, 9, 12, 16, 14, 11, 13, 15, 11, 14, 16, 8]\n",
+      "Ascending = [1, 3, 6, 8, 9, 10, 11, 11, 12, 13, 13, 14, 14, 15, 15, 16, 16]\n",
+      "Descending = [16, 16, 15, 15, 14, 14, 13, 13, 12, 11, 11, 10, 9, 8, 6, 3, 1]\n",
+      "[1, 3, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16]\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
+    "import random \n",
     "\n",
-    "random_numbers = [random.randint(1, 20) for _ in range(15)]\n",
-    "print(f\"Original list: {random_numbers}\")\n",
+    "random_num = [random.randint(1,20) for x in range(17)]\n",
+    "print(f\"Original list = {random_num}\")\n",
     "\n",
-    "sorted_numbers = sorted(random_numbers)\n",
-    "print(f\"Sorted in ascending order: {sorted_numbers}\")\n",
-    "\n",
-    "sorted_numbers_desc = sorted(random_numbers, reverse=True)\n",
-    "print(f\"Sorted in descending order: {sorted_numbers_desc}\")\n",
-    "\n",
-    "unique_numbers = list(set(random_numbers))\n",
-    "print(f\"List with duplicates removed: {unique_numbers}\")"
+    "sort_asceding = sorted(random_num)\n",
+    "print(f\"Ascending = {sort_asceding}\")\n",
+    "sort_desceding = sorted(random_num ,reverse=True)\n",
+    "print(f\"Descending = {sort_desceding}\")\\\n",
+    "    \n",
+    "unique = list(set(random_num))\n",
+    "print(unique)\n",
+    "\n"
    ]
   },
   {
@@ -151,19 +208,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "16cc89b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix: \n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "Element at second row and third column: 6\n"
+     ]
+    }
+   ],
    "source": [
     "matrix = [\n",
-    "    [1, 2, 3],\n",
-    "    [4, 5, 6],\n",
-    "    [7, 8, 9]\n",
+    "    [1,2,3],\n",
+    "    [4,5,6],\n",
+    "    [7,8,9]\n",
     "]\n",
-    "print(\"Matrix:\")\n",
+    "print(\"Matrix: \")\n",
     "for row in matrix:\n",
     "    print(row)\n",
-    "print(f\"Element at second row and third column: {matrix[1][2]}\")"
+    "print(f\"Element at second row and third column: {matrix[1][2]}\")\n"
    ]
   },
   {
@@ -177,9 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted students by score in descending order:\n",
+      "{'name': 'Charlie', 'score': 95}\n",
+      "{'name': 'Alice', 'score': 88}\n",
+      "{'name': 'Eve', 'score': 78}\n",
+      "{'name': 'Bob', 'score': 72}\n",
+      "{'name': 'David', 'score': 65}\n"
+     ]
+    }
+   ],
    "source": [
     "students = [\n",
     "    {'name': 'Alice', 'score': 88},\n",
@@ -205,9 +288,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original matrix:\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "Transposed matrix:\n",
+      "[1, 4, 7]\n",
+      "[2, 5, 8]\n",
+      "[3, 6, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "def transpose_matrix(matrix):\n",
     "    transposed = [[matrix[j][i] for j in range(len(matrix))] for i in range(len(matrix[0]))]\n",
@@ -238,9 +336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original nested list:\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "Flattened list:\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "def flatten_list(nested_list):\n",
     "    flat_list = [item for sublist in nested_list for item in sublist]\n",
@@ -269,9 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Modified list: [1, 2, 4, 6, 8, 99, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "lst = list(range(1, 11))\n",
     "print(f\"Original list: {lst}\")\n",
@@ -293,9 +411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'a'), (2, 'b'), (3, 'c'), (4, 'd'), (5, 'e')]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1, 2, 3, 4, 5]\n",
     "list2 = ['a', 'b', 'c', 'd', 'e']\n",
@@ -314,9 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 4, 5]\n",
+      "Reversed list: [5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_list(lst):\n",
     "    return lst[::-1]\n",
@@ -338,9 +473,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 4, 5]\n",
+      "Rotated list: [3, 4, 5, 1, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "def rotate_list(lst, n):\n",
     "    return lst[n:] + lst[:n]\n",
@@ -362,9 +506,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List 1: [1, 2, 3, 4, 5]\n",
+      "List 2: [3, 4, 5, 6, 7]\n",
+      "Intersection: [3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "def list_intersection(lst1, lst2):\n",
     "    return [x for x in lst1 if x in lst2]\n",
@@ -380,7 +534,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mllearning",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
