--- a/Section 4 - Inbuilt DataStructures/1.LIST/List.ipynb
+++ b/Section 4 - Inbuilt DataStructures/1.LIST/List.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,17 +491,12 @@
     }
    ],
    "source": [
+    "## list comprehension with function call\n",
+    "\n",
     "words = [\"hello\",\"world\",\"python\",\"list\",\"comprehension\"]\n",
     "lengths = [len(word) for word in words]\n",
     "print(lengths)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
