--- a/Section 14 - Sqlite3/practise.ipynb
+++ b/Section 14 - Sqlite3/practise.ipynb
@@ -1,22 +1,288 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SQL And SQLite\n",
+    "\n",
+    "SQL (Structured Query language) is a standard language for managing and manipulating relational databases.\n",
+    "SQLite is a self-contained, serverless, and zero-configuration database engine that is widely used for embedded\n",
+    "database systems. In this lesson, we will cover the basics of SQL and SQLite, including creating databases,\n",
+    "tables, and performing various SQL operations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Connection at 0x221cbf11210>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## connect to sqllite database\n",
+    "connection = sqlite3.connect('example.db')\n",
+    "connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = connection.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## CREATE A TABLE\n",
+    "cursor.execute('''\n",
+    "Create Table If Not Exists employees(\n",
+    "    id Integer Primary key,\n",
+    "    name Text Not Null,\n",
+    "    age Integer,\n",
+    "    department  text\n",
+    ")\n",
+    "''')\n",
+    "\n",
+    "\n",
+    "## Commit the changes\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute('''\n",
+    "    INSERT INTO employees (name, age, department)\n",
+    "    VALUES ('Mohit', 22, 'Ml engineer')\n",
+    "''')\n",
+    "\n",
+    "cursor.execute('''\n",
+    "    INSERT INTO employees (name, age, department)\n",
+    "    VALUES ('Naman', 16, 'Student')\n",
+    "''')\n",
+    "\n",
+    "cursor.execute('''\n",
+    "    INSERT INTO employees (name, age, department)\n",
+    "    VALUES ('Momo', 21, 'Data-scientist')\n",
+    "''')\n",
+    "\n",
+    "\n",
+    "##commit \n",
+    "connection.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Mohit', 22, 'Ml engineer')\n",
+      "(2, 'Naman', 16, 'Student')\n",
+      "(3, 'Momo', 21, 'Data-scientist')\n"
+     ]
+    }
+   ],
+   "source": [
+    "## query the data from sqlite3 table\n",
+    "cursor.execute('Select * from employees' )\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "##print the quert data\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##deleting the data from table\n",
+    "cursor.execute('''\n",
+    "Delete from employees\n",
+    "        where name = 'Naman'\n",
+    "\n",
+    "''')\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Mohit', 22, 'Ml engineer')\n",
+      "(3, 'Momo', 21, 'Data-scientist')\n"
+     ]
+    }
+   ],
+   "source": [
+    "## query the data from sqlite3 table\n",
+    "cursor.execute('Select * from employees' )\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "##print the quert data\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## WORKING WITH SALES DATA\n",
+    "#connect with sql database\n",
+    "connection = sqlite3.connect('sales_data.db')\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "#creating a table\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS sales(\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    data TEXT NOT NULL,\n",
+    "    product TEXT NOT NULL,\n",
+    "    sales INTEGER,\n",
+    "    region TEXT\n",
+    ")               \n",
+    "''')\n",
+    "\n",
+    "## insert data in the table\n",
+    "sales_data = [\n",
+    "    ('2023-01-01', 'Product1', 100, 'North'),\n",
+    "    ('2023-01-02', 'Product2', 200, 'South'),\n",
+    "    ('2023-01-03', 'Product1', 150, 'East'),\n",
+    "    ('2023-01-04', 'Product3', 250, 'West'),\n",
+    "    ('2023-01-05', 'Product2', 300, 'North')\n",
+    "]\n",
+    "\n",
+    "connection.executemany('''\n",
+    "Insert into sales(data,product,sales,region)\n",
+    "             values(?,?,?,?)\n",
+    "\n",
+    "''',sales_data )\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, '2023-01-01', 'Product1', 100, 'North')\n",
+      "(2, '2023-01-02', 'Product2', 200, 'South')\n",
+      "(3, '2023-01-03', 'Product1', 150, 'East')\n",
+      "(4, '2023-01-04', 'Product3', 250, 'West')\n",
+      "(5, '2023-01-05', 'Product2', 300, 'North')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute('SELECT * from sales')\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## connection close\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed database.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mProgrammingError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m## CONNECTION CLOSED SO ERROR OCCURED\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mcursor\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSELECT * from sales\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m rows = cursor.fetchall()\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m rows:\n",
+      "\u001b[31mProgrammingError\u001b[39m: Cannot operate on a closed database."
+     ]
+    }
+   ],
+   "source": [
+    "## CONNECTION CLOSED SO ERROR OCCURED\n",
+    "cursor.execute('SELECT * from sales')\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mllearning",
+   "display_name": "venv1",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.19"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
